Replace URI with URL